Updated ELK lab with beats